[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.data-science.dependencies]
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
